# aiwealthintelligence

./: .env.example  .gitignore  CHANGELOG.md  IMPLEMENTATION.md  LICENSE  Makefile  README.md  TODO.md  aiwealthgapanalysis.md  aiwealthintelligencewalkthrough.md  docker-compose.yml  render.yaml  tasklist.md  tasklist2.md  wealthintelligenceplan.md  wrangler.toml
.github/workflows/: ci.yml  deploy.yml
apps/web/: .gitattributes  analysis_options.yaml  pubspec.yaml
apps/web/android/: build.gradle
apps/web/android/app/: build.gradle  proguard-rules.pro
apps/web/android/app/src/main/: AndroidManifest.xml
apps/web/android/app/src/main/res/xml/: network_security_config.xml
apps/web/assets/animations/: .gitkeep
apps/web/assets/icons/: .gitkeep
apps/web/assets/images/: .gitkeep
apps/web/ios/Runner/: Info.plist
apps/web/ios/Runner.xcodeproj/: project.pbxproj
apps/web/lib/: main.dart
apps/web/lib/core/models/: models.dart
apps/web/lib/core/network/: api_client.dart  api_constants.dart  hive_cache.dart  result.dart
apps/web/lib/core/providers/: auth_provider.dart  portfolio_providers.dart  theme_provider.dart
apps/web/lib/core/repositories/: repositories.dart
apps/web/lib/core/router/: app_router.dart
apps/web/lib/core/services/: market_price_stream.dart
apps/web/lib/core/theme/: app_theme.dart
apps/web/lib/core/widgets/: common_widgets.dart  shell_scaffold.dart
apps/web/lib/features/ai/screens/: ai_chat_screen.dart  recommendation_screen.dart
apps/web/lib/features/auth/screens/: forgot_password_screen.dart  login_screen.dart  onboarding_wizard.dart  register_screen.dart
apps/web/lib/features/copilot/screens/: advanced_analysis_screen.dart  copilot_screen.dart  portfolio_doctor_screen.dart  scenario_screen.dart
apps/web/lib/features/dashboard/screens/: dashboard_screen.dart
apps/web/lib/features/import/screens/: import_screen.dart
apps/web/lib/features/market/screens/: market_screen.dart
apps/web/lib/features/portfolio/screens/: add_holding_screen.dart  portfolio_detail_screen.dart  portfolio_list_screen.dart
apps/web/lib/features/settings/screens/: settings_screen.dart
apps/web/test/: auth_widget_test.dart  dashboard_widget_test.dart  screens_widget_test.dart  widget_test.dart
apps/web/web/: _headers  index.html  manifest.json
docs/: API.md  CHANGELOG.md  IMPLEMENTATION_STATUS.md  KNOWN_ISSUES.md  PROJECT_STATUS.md  TESTING.md  TEST_REPORT.md  TODO.md  architecture.md  deployment.md  github_actions_validation.md  security.md
infra/docker/: Dockerfile.android  Dockerfile.api  Dockerfile.api-test  Dockerfile.flutter
infra/prometheus/: prometheus.yml
scripts/: backend.ps1  build-android-docker.ps1  build-frontend.ps1  flutter.ps1  run-docker.ps1  setup.ps1  test-backend.ps1
services/api/: README.md  alembic.ini  pyproject.toml
services/api/alembic/: env.py  script.py.mako
services/api/app/: config.py  main.py
services/api/app/domain/: entities.py  events.py  repositories.py
services/api/app/infrastructure/ai/: ai_copilot.py  ai_provider.py
services/api/app/infrastructure/analytics/: advanced_analytics.py  portfolio_analytics_engine.py
services/api/app/infrastructure/database/: __init__.py  models.py  session.py
services/api/app/infrastructure/importers/: broker_report_parser.py  cams_kfin_parser.py  cas_pdf_parser.py  email_cas_importer.py
services/api/app/infrastructure/market/: __init__.py  market_data_service.py  news_fetcher.py  price_cache.py
services/api/app/infrastructure/repositories/: redis_cache.py  sqlalchemy_repos.py
services/api/app/infrastructure/scheduler/: scheduler.py
services/api/app/infrastructure/services/: mail_service.py  notification_service.py  setu_aa_service.py
services/api/app/presentation/api/v1/: ai_routes.py  auth_routes.py  consent_routes.py  copilot_advanced_routes.py  copilot_routes.py  goal_routes.py  health_routes.py  import_routes.py  market_routes.py  notification_routes.py  portfolio_routes.py  router.py  watchlist_routes.py  ws_market_routes.py
services/api/app/presentation/middleware/: auth_dependency.py  error_handler.py  rate_limiter.py  security_headers.py
services/api/app/presentation/schemas/: api_schemas.py
services/api/app/shared/: exceptions.py  observability.py  security.py
services/api/tests/: conftest.py  test_advanced_analytics.py  test_ai_provider.py  test_analytics_engine.py  test_api_endpoints.py  test_api_error_branches.py  test_auth.py  test_auth_advanced.py  test_auth_dependency.py  test_copilot_routes.py  test_coverage_boost.py  test_database_session.py  test_domain.py  test_events.py  test_goal_routes.py  test_importers.py  test_importers_advanced.py  test_market_news_cache.py  test_market_routes.py  test_notification_routes.py  test_password_reset.py  test_portfolio.py  test_portfolio_imports.py  test_setu_aa_crypto.py  test_watchlist_routes.py
