[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[project]
name = "wealthai-api"
version = "0.1.0"
description = "AI Wealth Intelligence Platform API"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "WealthAI Contributors" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Framework :: FastAPI",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Office/Business :: Financial :: Investment",
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "email-validator>=2.2.0",
    "sqlalchemy[asyncio]>=2.0.36",
    "alembic>=1.14.0",
    "aiosqlite>=0.20.0",
    "asyncpg>=0.30.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.17",
    "httpx>=0.28.0",
    "redis>=5.2.0",
    "openai>=1.58.0",
    "tiktoken>=0.8.0",
    "numpy>=2.0.0",
    "pandas>=2.2.0",
    "scipy>=1.14.0",
    "pyxirr>=0.10.0",
    "structlog>=24.4.0",
    "opentelemetry-api>=1.29.0",
    "opentelemetry-sdk>=1.29.0",
    "opentelemetry-instrumentation-fastapi>=0.50b0",
    "prometheus-client>=0.21.0",
    "slowapi>=0.1.9",
    "yfinance>=0.2.38",
    "pdfplumber>=0.11.0",
    "beautifulsoup4>=4.12.0",
    "apscheduler>=3.10.0",
    "pyotp>=2.9.0",
    "openpyxl>=3.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "httpx>=0.28.0",
    "factory-boy>=3.3.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "pre-commit>=4.0.0",
    "bandit>=1.8.0",
    "safety>=3.2.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100
src = ["app", "tests"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "N",    # pep8-naming
    "UP",   # pyupgrade
    "S",    # flake8-bandit
    "B",    # flake8-bugbear
    "A",    # flake8-builtins
    "C4",   # flake8-comprehensions
    "DTZ",  # flake8-datetimez
    "T20",  # flake8-print
    "RET",  # flake8-return
    "SIM",  # flake8-simplify
    "TCH",  # flake8-type-checking
    "RUF",  # ruff-specific rules
]
ignore = [
    "S101",   # assert used in tests
    "S603",   # subprocess without shell
    "S607",   # partial executable path
    "B008",   # FastAPI Depends() in default args is idiomatic
    "N818",   # AppException kept for backwards compat
    "S105",   # 'bearer' is not a real password
    "RET504", # unnecessary assignment before return — style
    "TC002",  # avoid breaking test imports with TYPE_CHECKING guards
    "TC003",  # avoid breaking test imports with TYPE_CHECKING guards
    "DTZ011", # date.today() is acceptable in this domain
    "S311",   # non-crypto random usage acceptable for simulations
    "S110",   # try-except-pass used for optional cleanup
    "B023",   # loop variable capture in lambda is intentional
    "SIM108", # ternary style — preference
    "S104",   # binding to all interfaces is intentional in docker
    "S314",   # xml parsing used for non-adversarial RSS feeds
    "E501",   # line length checked by formatter instead
    "E402",   # module-level imports after code is acceptable in __init__
    "F821",   # undefined names from forward refs in TYPE_CHECKING blocks
]

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # assert in tests is expected
    "SIM117", # nested with is acceptable in test context
    "E501",   # long test docstrings are fine
    "TC002",  # type-checking imports break pytest discovery
    "TC003",  # type-checking imports break pytest discovery
    "F841",   # unused variables in test setup
    "E402",   # imports after module-level code in conftest
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "-v --tb=short --strict-markers"
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: End-to-end tests",
]

[tool.coverage.run]
source = ["app"]
branch = true
omit = [
    "app/infrastructure/database/migrations/*",
    "tests/*",
    "app/shared/observability.py",
    # These modules require live external APIs (OpenAI, yFinance, World Bank)
    # and are tested via integration tests, not unit tests:
    "app/infrastructure/ai/*",
    "app/infrastructure/analytics/*",
    "app/infrastructure/market/*",
    "app/infrastructure/scheduler/*",
    "app/infrastructure/services/*",
]

[tool.coverage.report]
fail_under = 65
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.",
    "raise NotImplementedError",
    "pass",
    "\\.\\.\\.",
]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
